package(default_visibility = ["//visibility:public"])

cc_library(
  name = "status_macros",
  hdrs = [
    "status_macros.h",
  ],
  deps = [
    "@abseil-cpp//absl/status",
    "@abseil-cpp//absl/status:statusor",
  ],
)

cc_test(
  name = "status_macros_test",
  srcs = [
    "tests/status_macros_test.cc",
  ],
  deps = [
    ":status_macros",
    "@abseil-cpp//absl/status",
    "@abseil-cpp//absl/status:statusor",
    "@com_google_googletest//:gtest_main",
  ],
)
